--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,6 +1,5 @@
 #container {
   text-align: center;
-
   position: absolute;
   left: 0;
   right: 0;
@@ -24,4 +23,42 @@
 
 #container a {
   text-decoration: none;
+}
+
+.btnDetails {
+  width: 300px;
+  height: 40px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.content img {
+  width: 200px;
+  height: auto;
+}
+
+.card {
+  width: 450px;
+  margin: 0 auto;
+}
+
+.nav {
+  cursor: pointer;
+}
+
+.btnDetails {
+  --background: #15c474;
+  text-transform: capitalize;
+  font-weight: bold;
+}
+
+.pokemon-name {
+  font-weight: bold;
+  text-transform: capitalize;
+  font-size: 24px;
+  color: #082fcc;
 }
