--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,10 +1,8 @@
 #container {
   text-align: center;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  padding: 5%;
+  justify-content: center;
+  display: flex;
 }
 
 #container strong {
@@ -15,9 +13,7 @@
 #container p {
   font-size: 16px;
   line-height: 22px;
-
   color: #8c8c8c;
-
   margin: 0;
 }
 
@@ -26,28 +22,13 @@
 }
 
 .btnDetails {
-  width: 300px;
-  height: 40px;
-}
-
-.content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  padding: 10px;
+  width: 100%;
 }
 
 .content img {
   width: 200px;
   height: auto;
-}
-
-.card {
-  width: 450px;
-  margin: 0 auto;
-}
-
-.nav {
-  cursor: pointer;
 }
 
 .btnDetails {
