Ajuste nas rotas,Teste unitários e Ajuste texto tela favoritos e css

--- a/src/app/pokemon-favorites/pokemon-favorites.page.html
+++ b/src/app/pokemon-favorites/pokemon-favorites.page.html
@@ -15,7 +15,7 @@
 
 <ion-header>
   <ion-toolbar>
-    <ion-title>Lista de Pokémons favoritados</ion-title>
+    <ion-title class="title"> Lista Favoritos</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -29,6 +29,6 @@
     </ion-item>
   </ion-list>
   <ng-template #noFavorites>
-    <ion-text color="medium">Nenhum Pokémon favoritado.</ion-text>
+    <ion-text id="caption" color="medium">Nenhum Pokémon favoritado.</ion-text>
   </ng-template>
 </ion-content>
