Tela detalhes - Correção carregamento detalhes pokemon pokeApi - Correção botão redirecionamento home - Correção botão favoritos
Testes Unitarios
- Adição de teste para isFavorite

--- a/src/app/pokemon-details/pokemon-details.page.html
+++ b/src/app/pokemon-details/pokemon-details.page.html
@@ -14,13 +14,11 @@
   </ion-toolbar>
 </ion-header>
 
-
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" scrollY="true" id="container">
   <!-- Informações do Pokémon -->
-  <ion-card class="pokemon-card">
+  <ion-card *ngIf="pokemonData && pokemonData[currentPage]" class="pokemon-card">
     <ion-card-header>
-      <ion-card-title class="text">{{ pokemonData[currentPage].name }} - {{ pokemonData[currentPage].number
-        }}</ion-card-title>
+      <ion-card-title class="text">{{ pokemonData[currentPage]?.name }} - {{ pokemonData[currentPage]?.number }}</ion-card-title>
     </ion-card-header>
 
     <!-- Detalhes do Pokémon -->
@@ -28,16 +26,13 @@
       <div class="row">
 
         <div class="favorite-container">
-          <span class="favorite-text">Favoritar</span>
-          <ion-button class="favorite" (click)="toggleFavorite(pokemonData[currentPage].name)">
-            <ion-icon [name]="pokemonData[currentPage].isFavorite ? 'star' : 'star-outline'"></ion-icon>
+          <ion-button (click)="toggleFavorite(pokemonData[currentPage].name)"  class="favorite">
+            <ion-icon  [name]="isFavorite(pokemonData[currentPage].name) ? 'star' : 'star-outline'"></ion-icon>
           </ion-button>
         </div>
-
         <!-- Imagem do Pokémon -->
         <div>
-          <ion-img class="pokemon" [src]="pokemonData[currentPage].image"
-            [alt]="pokemonData[currentPage].name"></ion-img>
+          <ion-img class="pokemon" [src]="pokemonData[currentPage].image" [alt]="pokemonData[currentPage].name"></ion-img>
         </div>
         <!-- Descrição-->
         <div class="col-md-10">
@@ -48,53 +43,43 @@
         <div class="col-md-12 space">
           <div class="stat-bar-label">Ataque:</div>
           <div class="stat-bar">
-            <div class="stat-bar-fill attack-bar" [style.width.%]="pokemonData[currentPage].stats.attack">{{
-              pokemonData[currentPage].stats.attack }}</div>
+            <div class="stat-bar-fill attack-bar" [style.width.%]="pokemonData[currentPage].stats.attack">{{ pokemonData[currentPage].stats.attack }}</div>
           </div>
           <div class="stat-bar-label">Defesa:</div>
           <div class="stat-bar">
-            <div class="stat-bar-fill defense-bar" [style.width.%]="pokemonData[currentPage].stats.defense">{{
-              pokemonData[currentPage].stats.defense }}</div>
+            <div class="stat-bar-fill defense-bar" [style.width.%]="pokemonData[currentPage].stats.defense">{{ pokemonData[currentPage].stats.defense }}</div>
           </div>
           <div class="stat-bar-label">Velocidade:</div>
           <div class="stat-bar">
-            <div class="stat-bar-fill speed-bar" [style.width.%]="pokemonData[currentPage].stats.speed">{{
-              pokemonData[currentPage].stats.speed }}</div>
+            <div class="stat-bar-fill speed-bar" [style.width.%]="pokemonData[currentPage].stats.speed">{{ pokemonData[currentPage].stats.speed }}</div>
           </div>
         </div>
-      </div>
 
-      <div class="row space">
         <div class="col-md-8">
           <div class="stat-bar-container-small">
             <div class="stat-bar-item">
               <div class="stat-bar-label">Altura:</div>
               <div class="stat-bar-small">
-                <div class="stat-bar-fill-small height-bar" [style.width.%]="pokemonData[currentPage].stats.height">{{
-                  pokemonData[currentPage].stats.height }}</div>
+                <div class="stat-bar-fill-small height-bar" [style.width.%]="pokemonData[currentPage].stats.height">{{ pokemonData[currentPage].stats.height }}</div>
               </div>
             </div>
             <div class="stat-bar-item">
               <div class="stat-bar-label">Peso:</div>
               <div class="stat-bar-small">
-                <div class="stat-bar-fill-small weight-bar" [style.width.%]="pokemonData[currentPage].stats.weight">{{
-                  pokemonData[currentPage].stats.weight }}</div>
+                <div class="stat-bar-fill-small weight-bar" [style.width.%]="pokemonData[currentPage].stats.weight">{{ pokemonData[currentPage].stats.weight }}</div>
               </div>
             </div>
             <div class="stat-bar-item">
               <div class="stat-bar-label">Categoria:</div>
               <div class="stat-bar-small">
-                <div class="stat-bar-fill-small category-bar" [style.width.%]="pokemonData[currentPage].stats.category">
-                  {{ pokemonData[currentPage].stats.category }}</div>
+                <div class="stat-bar-fill-small category-bar" [style.width.%]="pokemonData[currentPage].stats.category">{{ pokemonData[currentPage].stats.category }}</div>
               </div>
             </div>
 
             <div class="stat-bar-item">
               <div class="stat-bar-label">Habilidades:</div>
               <div class="stat-bar-small">
-                <div class="stat-bar-fill-small abilities-bar"
-                  [style.width.%]="pokemonData[currentPage].stats.abilities">{{ pokemonData[currentPage].stats.abilities
-                  }}</div>
+                <div class="stat-bar-fill-small abilities-bar" [style.width.%]="pokemonData[currentPage].stats.abilities">{{ pokemonData[currentPage].stats.abilities }}</div>
               </div>
             </div>
           </div>
@@ -105,14 +90,10 @@
       <div class="row space">
         <div class="col-md-12">
           <p><strong>Tipos:</strong>
-            <span *ngFor="let type of pokemonData[currentPage].types">
-              {{ type }};
-            </span>
+            <span *ngFor="let type of pokemonData[currentPage].types">{{ type }};</span>
           </p>
           <p><strong>Fraquezas:</strong>
-            <span *ngFor="let weakness of pokemonData[currentPage].weaknesses">
-              {{ weakness }};
-            </span>
+            <span *ngFor="let weakness of pokemonData[currentPage].weaknesses">{{ weakness }};</span>
           </p>
         </div>
       </div>
