--- a/src/app/pokemon-details/pokemon-details.page.scss
+++ b/src/app/pokemon-details/pokemon-details.page.scss
@@ -51,7 +51,7 @@
     width: 100%;
 }
 
-#container{
+#container {
     height: 90%;
 }
 
@@ -107,6 +107,10 @@
 
 .stat-bar-label {
     font-weight: bold;
+}
+
+.icon {
+    color: #696a6e;
 }
 
 .favorite {
