Adição do bootstrap e correção botão favoritos responsividade

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -32,8 +32,8 @@ ion-content.content-background {
   height: auto;
 }
 
-// Responsividade para dispositivos móveis, tablets menores 
-// e smartphones em orientação paisagem (horizontal)
+// Responsividade para dispositivos móveis,
+// tablets menores e smartphones
 @media (max-width: 768px) {
   .card-small {
     margin-top: 20%;
